--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,18 @@
 trigger:
  - master
 
- pool:
-   vmImage: 'Ubuntu-16.04'
+strategy:
+  matrix:
+    linux:
+      imageName: "ubuntu-16.04"
+    mac:
+      imageName: "macos-10.13"
+    windows:
+      imageName: "vs2017-win2016"
+  maxParallel: 3
+
+pool:
+  vmImage: $(imageName)
 
  steps:
    - task: Maven@3
