--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,8 @@ steps:
       publishJUnitResults: true
       testResultsFiles: "**/TEST-*.xml"
       goals: "package"
+  - task: AzureRmWebAppDeployment@3
+    inputs:
+      azureSubscription: '<Azure service connection>'
+      WebAppName: 'pipelines-javajv'
+      Package: '$(System.DefaultWorkingDirectory)/**/*.war'
