Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,5 +28,5 @@ steps:
   - task: AzureRmWebAppDeployment@3
     inputs:
       azureSubscription: 'pipelines-javaRm'
-      WebAppName: 'pipelines-javajv'
+      WebAppName: 'northwindWebRg '
       Package: '$(System.DefaultWorkingDirectory)/**/*.war'
