--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,8 @@
 trigger:
 - master
 
-strategy:
-  matrix:
-    jdk10_linux:
-      imageName: "ubuntu-16.04"
-      jdk_version: "1.10"
-    jdk11_windows:
-      imageName: "vs2017-win2016"
-      jdk_version: "1.11"
-  maxParallel: 2
-
 pool:
-  vmImage: $(imageName)
+  vmImage: 'ubuntu-latest'
 
 steps:
   - task: Maven@3
