--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ variables:
   serviceConnectionToAzure: connection-to-pipelinesjava
   # the name of your web app here is the same one you used above
   # when you created the web app using the Azure CLI
-  appName: pipelines-javajv
+  appName: pipelinesjavajv
 
 trigger:
 - master
